# tree-sitter-asn1

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-asn1.pc.in
bindings/c/tree_sitter/: tree-sitter-asn1.h
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_asn1/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterAsn1Tests/: TreeSitterAsn1Tests.swift
doc/: asn1.bnf
queries/asn1/: highlights.scm
src/: grammar.json  node-types.json  parser.c
