[package]
name = "tree-sitter-asn1"
description = "Abstract Syntax Notation"
version = "0.1.0"
authors = ["Jonathan M. Wilbur <jonathan@wilbur.space>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "asn1"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/jonathanwilbur/tree-sitter-asn1"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.5"
